# mypaint

./: .SRCINFO  BUILD_standalone.sh  LICENSE  PKGBUILD  README.md  main.py  mypaint.desktop  mypaint.spec  pyproject.toml
mypaint/: __main__.py  app.py  main_window.py
mypaint/canvas/: canvas_widget.py
mypaint/services/: file_service.py  theme_service.py
mypaint/tools/: color_picker_tool.py  eraser_tool.py  selection_tool.py  shape_tools.py
mypaint/widgets/: color_palette.py  rulers.py  size_selector.py
paint/: app.py  main_window.py
paint/canvas/: canvas_widget.py  image_buffer.py  undo_manager.py
paint/dialogs/: properties_dialog.py  resize_dialog.py  text_toolbar.py
paint/services/: clipboard_service.py  file_service.py
paint/tools/: base_tool.py  brush_tool.py  eraser_tool.py  fill_tool.py  magnifier_tool.py  pencil_tool.py  selection_tool.py  shape_tools.py  text_tool.py
paint/widgets/: color_palette.py  thumbnail_window.py  tool_palette.py
