[project]
name = "mypaint"
version = "0.1.0"
description = "MS Paint clone for Omarchy Linux / Hyprland (Wayland Native)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.11",
]

[project.scripts]
mypaint = "mypaint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
